Fixes Devcontainer configuration
* Uses Python 3.9 image instead of latest
* Installs the versions specified in 'requirements.txt' instead of the latest version of the packages
* Removes the need for Dockerfile (Python Devcontainer images are pre-built)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "Python Image",
-	"dockerFile": "Dockerfile",
+	"image": "mcr.microsoft.com/devcontainers/python:3.9",
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -26,6 +26,8 @@
 		},
 		"codespaces": {
 			"openFiles": ["stock2.py"]
-		}
+		},
+
+		"postStartCommand": "pip install -r requirements.txt"
 	}
 }
