Fixes the issue with `postCreateCommand`

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,6 @@
 		"codespaces": {
 			"openFiles": ["stock2.py"]
 		},
-
-		"postStartCommand": "pip install -r requirements.txt"
-	}
+	},
+	"postCreateCommand": "pip install -r requirements.txt"
 }
