--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,5 +28,12 @@
 			"openFiles": ["stock2.py"]
 		},
 	},
-	"postCreateCommand": "pip install -r requirements.txt"
+	"forwardPorts": [8501],
+	"postCreateCommand": "pip install -r requirements.txt",
+	"portsAttributes": {
+		"8501": {
+			"label": "Streamlit",
+			"onAutoForward": "openPreview"
+		}
+	}
 }
